--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.1",
     "nodemailer": "^6.9.8",
-    "nodemon": "^3.0.3"
+    "nodemon": "^3.0.3",
+    "run": "^1.5.0"
   }
 }
